# cenote

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/cenote/: Cargo.toml  build.rs  slangc.rs
crates/cenote-cli/: Cargo.toml
crates/cenote-cli/src/: main.rs
crates/cenote-pbrt/: Cargo.toml
crates/cenote-pbrt/src/: env.rs  lib.rs  map.rs  parse.rs  tokenize.rs
crates/cenote-pbrt/src/map/: color.rs  mod.rs  shape.rs
crates/cenote-pbrt/tests/: corpus.rs
crates/cenote-pbrt/tests/golden/: cornell-box.exr  teapot-full.exr  veach-mis.exr
crates/cenote-viewer/: Cargo.toml
crates/cenote-viewer/src/: camera.rs  denoise.rs  lookdev.rs  main.rs  ui.rs
crates/cenote/assets/: README.md  kloofendal_puresky.exr
crates/cenote/shaders/: accumulate.slang  environment.slang  intersect.slang  lights.slang  openpbr.slang  pathstate.slang  primary.slang  raygen.slang  resolve.slang  rng.slang  rng_test.slang  scene.slang  shade_miss.slang  shade_surface.slang  textures.slang  tonemap.slang  trace_shadow.slang
crates/cenote/src/: color.rs  denoise.rs  environment.rs  error.rs  format.rs  lib.rs  lights.rs  material.rs  output.rs  ply.rs  render.rs  scene.rs  shaders.rs  tables.rs  texture.rs  wavefront.rs
crates/cenote/src/gpu/: accel.rs  buffer.rs  image.rs  init.rs  mod.rs  overlay.rs  pipeline.rs  present.rs  submit.rs
crates/cenote/src/render/: film.rs  mod.rs  session.rs  tests.rs  tonemap.rs
crates/cenote/src/scene/: changeset.rs  demo.rs  description.rs  lower.rs  mod.rs  prep.rs  shapes.rs
crates/cenote/tests/: golden.rs
crates/cenote/tests/golden/: demo-64spp.exr  demo.exr
docs/: charter.md  decisions.md  deferrals.md  m0-plan.md  m1-plan.md  m2-plan.md
scenes/: example.ron
tests/scenes/: README.md  fetch-showcase.sh
tests/scenes/cornell-box/: scene-v4.pbrt
tests/scenes/teapot-full/: scene-v4.pbrt
tests/scenes/teapot-full/textures/: envmap-octahedral.exr
tests/scenes/veach-mis/: scene-v4.pbrt
