# Cenote workspace. Crates live under crates/; shared metadata and the lint
# policy are defined here so every crate inherits them via `[lints] workspace = true`.

[workspace]
resolver = "3"
members = ["crates/cenote", "crates/cenote-cli"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/josephwardle/cenote"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
# Pedantic on by default; the allows below are the curated exceptions.
# Each exception exists because the lint fights renderer idiom, not because
# it found something we were too lazy to fix.
pedantic = { level = "warn", priority = -1 }
# `gpu::buffer::Buffer` etc. is deliberate: paths read as subsystem::noun.
module_name_repetitions = "allow"
# GPU code converts between u32/u64/usize/f32 constantly (device addresses,
# dispatch sizes, buffer offsets). Blanket cast lints would bury real issues
# under hundreds of mechanical `try_from` conversions at sites where the
# ranges are structurally bounded (image dims, vertex counts).
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
