[workspace]
resolver = "3"
members = ["crates/cenote", "crates/cenote-cli", "crates/cenote-viewer"]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joseph-wardle/cenote"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
