[workspace]
resolver = "3"
members = [
    "crates/cenote",
    "crates/cenote-cli",
    "crates/cenote-pbrt",
    "crates/cenote-viewer",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joseph-wardle/cenote"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# Every test that builds the demo scene decodes its 43 MB environment EXR;
# unoptimized, that decompression dominates the debug test suite.
[profile.dev.package.exr]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

# The demo change-set round-trips ~500 KB of icosphere RON in tests;
# unoptimized ron turns that into tens of seconds.
[profile.dev.package.ron]
opt-level = 3
