[package]
name = "cenote-cli"
description = "Headless batch renderer over the cenote core library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
cenote = { path = "../cenote" }
env_logger = "0.11.11"

[lints]
workspace = true
