[package]
name = "cenote-cli"
description = "Headless batch renderer over the cenote core library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
cenote = { path = "../cenote" }
cenote-pbrt = { path = "../cenote-pbrt" }
clap = { version = "4.6.1", features = ["derive"] }
env_logger = "0.11.11"
log = "0.4.33"

[features]
# Builds `render --denoise` (the flag itself always parses, and names
# this feature when the build lacks it).
denoise = ["cenote/denoise"]

[lints]
workspace = true
