[package]
name = "cenote-viewer"
description = "Interactive viewer over the cenote core library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
cenote = { path = "../cenote" }
env_logger = "0.11.11"
glam = { version = "0.33.2", features = ["bytemuck"] }
log = "0.4.33"
winit = "0.30.12"

[lints]
workspace = true
