[package]
name = "cenote-viewer"
description = "Interactive viewer over the cenote core library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.103"
cenote = { path = "../cenote" }
cenote-pbrt = { path = "../cenote-pbrt" }
# Pinned to 0.33 by egui-ash-renderer (the core's overlay renderer).
egui = "0.33.0"
egui-winit = "0.33.0"
env_logger = "0.11.11"
glam = { version = "0.33.2", features = ["bytemuck"] }
log = "0.4.33"
# Same watch backend the core's shader hot reload already uses.
notify = "8.2.0"
winit = "0.30.12"

[lints]
workspace = true
