[package]
name = "cenote"
description = "Core renderer library: GPU device management, scene, wavefront orchestration, image output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Dependency policy (docs/decisions.md): every new dependency needs a sentence
# of justification in the commit that adds it; anything replaceable by <100
# lines of code gets written instead. Dependencies land with their first caller.
[dependencies]
ash = "0.38.0"
bytemuck = { version = "1.25.0", features = ["derive", "extern_crate_alloc"] }
exr = "1.74.0"
gpu-allocator = "0.28.0"
log = "0.4.33"
thiserror = "2.0.18"

[lints]
workspace = true
