[package]
name = "cenote"
description = "Core renderer library: GPU device management, scene, wavefront orchestration, image output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Dependency policy: every new dependency needs a sentence
# of justification in the commit that adds it; anything replaceable by <100
# lines of code gets written instead. Dependencies land with their first caller.
[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.25.0", features = ["derive", "extern_crate_alloc"] }
# Types only (tessellated meshes, texture deltas) — the UI itself lives in
# cenote-viewer, which enables the fonts.
egui = { version = "0.33.0", default-features = false }
egui-ash-renderer = { version = "0.11.0", features = ["dynamic-rendering", "gpu-allocator"] }
exr = "1.74.0"
glam = { version = "0.33.2", features = ["bytemuck"] }
gpu-allocator = "0.28.0"
# Texture decode, exactly the two source formats the corpus uses (float
# sources ride the `exr` crate above).
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
# Intel's ISPC texture-compression kernels: production-quality BC4/5/6H/7
# encoders, far past any hand-roll threshold. The DDS cache *around* them
# is ~90 hand-rolled lines (texture.rs), so `ddsfile` stayed out.
intel_tex_2 = "0.5.0"
log = "0.4.33"
notify = "8.2.0"
raw-window-handle = "0.6.2"
# Pinned exactly: ron routinely ships breaking changes in semver-minor
# releases, and the scene format's stability rides on it.
ron = "=0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
env_logger = "0.11.11"
nv-flip = "0.1.2"
